<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="bookmarkDetailsView"
            type="com.zak.placebook.viewmodel.BookmarkDetailsViewModel.BookmarkDetailsView" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="300dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/default_photo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewName"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewNotes"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:text="@string/notes"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewPhone"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNotes" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewAddress"
                    style="@style/BookmarkLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                    app:layout_constraintEnd_toStartOf="@+id/barrier1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPhone" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="start"
                    app:constraint_referenced_ids="editTextName, editTextNotes,editTextPhone, editTextAddress" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:text="@{bookmarkDetailsView.name}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPlace" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNotes"
                    android:text="@{bookmarkDetailsView.notes}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_notes"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextName" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:text="@{bookmarkDetailsView.phone}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextNotes" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddress"
                    android:text="@{bookmarkDetailsView.address}"
                    style="@style/BookmarkEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="textMultiLine"
                    android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/barrier1"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
